--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
 **/.ipynb_checkpoints
+.venv
 
 # Chapter 2
 Ch2/GoogleNews-vectors-negative300.bin
@@ -13,3 +14,6 @@ Ch2/spelling_en.txt
 Ch3/data
 Ch3/model_cbow.bin
 Ch3/model_skipgram.bin
+
+# Chapter 4
+Ch4/GoogleNews-vectors-negative300.bin
